--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 
 body {
     font-family: "Roboto";
+    background-color: rgb(254, 251, 228);
 }
 
 html {
@@ -33,7 +34,6 @@ nav {
     justify-content: space-around;
     align-items: center;
     height: 12vh;
-    background-color: rgb(164, 161, 149);
 }
 
 .nav-links {
@@ -216,7 +216,7 @@ section {
 
 }
 
-img {
+#profile-photo {
     border-radius: 250px;
     
 }
@@ -359,4 +359,80 @@ article {
 
 article .icon {
     cursor: default;
+}
+
+/* projects section */
+
+#projects {
+    position: relative;
+}
+
+.color-container {
+    border-color: rgb(163, 163, 163);
+    background: rgb(250, 250, 250);
+}
+
+.project-img {
+    border-radius: 2rem;
+    width:90%;
+    height:90%;
+}
+
+.project-title {
+    margin:1rem;
+    color:black;
+}
+
+.project-btn {
+    color: black;
+    border-color: rgb(163, 163, 163);
+}
+
+/* contact section */
+
+#contact {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 10vh;
+}
+
+.contact-info-upper-container {
+    display: flex;
+    justify-content: center;
+    border-radius: 2rem;
+    border: rgb(53,53,53) 0.1rem solid;
+    border-color: rgb(163, 163, 163);
+    background: rgb(250, 250, 250);
+    margin: 2rem auto;
+    padding:0.5rem;
+    width: 500px;
+}
+
+.contact-info-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+    margin: 1rem;
+}
+
+.contact-info-container p {
+    font-size: larger;
+}
+
+.contact-icon {
+    cursor: default;
+    height: 2rem;
+}
+
+/* footer */
+
+footer {
+    height: 26vh;
+    margin: 0 1rem;
+}
+
+footer p {
+    text-align: center;
 }
