--- a/style.css
+++ b/style.css
@@ -399,14 +399,13 @@ article .icon {
 
 .contact-info-upper-container {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     border-radius: 2rem;
     border: rgb(53,53,53) 0.1rem solid;
     border-color: rgb(163, 163, 163);
     background: rgb(250, 250, 250);
     margin: 2rem auto;
-    padding:0.5rem;
-    width: 500px;
+    padding:1.2rem;
 }
 
 .contact-info-container {
